--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,20 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Temperature Conversion
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-item>
+    <ion-label floating>Celcius</ion-label>
+    <ion-input type="text" [(ngModel)]="temp.celsius" [(ngModelOptions)]="{standalone:true}" (keyup)="tempConvertFahreneit()"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-input type="text" [(ngModel)]="temp.fahreneit" [(ngModelOptions)]="{standalone:true}" (keyup)="tempConvertCelcius()"></ion-input>
+  </ion-item>
+
+
+
 </ion-content>
